test/corpus/preproc.txt
=========
preproc statement
=========

##[[
	local x = 1
]]

##[=[
	local x = 1
]=]

## for x in y() do
  print("hello")
## end

---

(source_file
  (preproc_statement
        (preproc_statement_content))
  (preproc_statement
        (preproc_statement_content))
  (preproc_statement
        (preproc_statement_content))
  (function_call
    (identifier)
    (expression_list
      (string)))
  (preproc_statement
        (preproc_statement_content)))

=========
preproc expression
=========

local x = #[1]#

#|name|# = 10

---

(source_file
  (declaration
    (assignment_statement
      (variable_list
        (identifier))
      (expression_list
        (preproc_expression
          (preproc_expression_content)))))
  (assignment_statement
    (variable_list
      (preproc_expression
        (preproc_expression_content)))
    (expression_list
      (number))))

=========
preproc function call
=========

#[test]#(a,b,c)
#|test|#(a,b,c)

---

(source_file
  (function_call
    (preproc_expression
      (preproc_expression_content))
    (expression_list
      (identifier)
      (identifier)
      (identifier)))
  (function_call
    (preproc_expression
      (preproc_expression_content))
    (expression_list
      (identifier)
      (identifier)
      (identifier))))

=========
preproc function call assignment
=========

local x = #[y]#(a,b,c)

---

(source_file
  (declaration
    (assignment_statement
      (variable_list
        (identifier))
      (expression_list
        (function_call
          (preproc_expression
            (preproc_expression_content))
          (expression_list
            (identifier)
            (identifier)
            (identifier)))))))

=========
preproc function definition
=========

local function #[name]#()
end
---

(source_file
  (declaration
    (function_definition
      (preproc_expression
        (preproc_expression_content)))))
