test/corpus/string.txt
=========
string with escape character
=========

local x = "hello\n"
---

(source_file
      (declaration
        (assignment_statement
          (variable_list
            (identifier))
          (expression_list
            (string
              (escape_sequence))))))

=========
string with block inside
=========

local x = "--[[]]"
---

(source_file
      (declaration
        (assignment_statement
          (variable_list
            (identifier))
          (expression_list
            (string)))))

=========
multiline escaped string
=========

local x = "hello\z
hi"
---

(source_file
      (declaration
        (assignment_statement
          (variable_list
            (identifier))
          (expression_list
            (string
              (escape_sequence))))))
=========
multiline string
=========

local x = [[
  hello\nhi
]]
---

(source_file
      (declaration
        (assignment_statement
          (variable_list
            (identifier))
          (expression_list
            (string
              )))))

=========
multiline string with equals
=========

local x = [=[[&<>"']]=]

---

(source_file
      (declaration
        (assignment_statement
          (variable_list
            (identifier))
          (expression_list
            (string
              )))))
